--- a/CV.Management.Web/Views/Manage/ManageLogins.cshtml
+++ b/CV.Management.Web/Views/Manage/ManageLogins.cshtml
@@ -5,67 +5,95 @@
     Layout = "~/Views/Account/_AccountLayout.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
-
 <p class="text-success">@ViewBag.StatusMessage</p>
-@{
-    var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
-    if (loginProviders.Count() == 0) {
-        <div>
-            <p>
-                There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
-                for details on setting up this ASP.NET application to support logging in via external services.
-            </p>
+
+<div class="row">
+    <div class="col-md-12">
+
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <img src="~/Content/Images/logo.png" alt="Amrop" class="login-image">
+            </div>
         </div>
-    }
-    else
-    {
-        if (Model.CurrentLogins.Count > 0)
-        {
-            <h4>Registered Logins</h4>
-            <table class="table">
-                <tbody>
-                    @foreach (var account in Model.CurrentLogins)
+
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 text-center">
+
+                @{
+                    var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
+                    if (loginProviders.Count() == 0)
                     {
-                        <tr>
-                            <td>@account.LoginProvider</td>
-                            <td>
-                                @if (ViewBag.ShowRemoveButton)
-                                {
-                                    using (Html.BeginForm("RemoveLogin", "Manage"))
+                        <div>
+                            <p>
+                                There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
+                                for details on setting up this ASP.NET application to support logging in via external services.
+                            </p>
+                        </div>
+                    }
+                    else
+                    {
+                        if (Model.CurrentLogins.Count > 0)
+                        {
+                            <h4>Registered Logins</h4>
+                        }
+                    }
+                }
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                @{
+                    if (loginProviders.Count() > 0 && Model.CurrentLogins.Count > 0)
+                    {
+
+                        <dl class="dl-horizontal login-table">
+
+                            @foreach (var account in Model.CurrentLogins)
+                            {
+                                <dt class="login-title">@account.LoginProvider:</dt>
+                                <dd>
+                                    @if (ViewBag.ShowRemoveButton)
                                     {
-                                        @Html.AntiForgeryToken()
-                                        <div>
-                                            @Html.Hidden("loginProvider", account.LoginProvider)
-                                            @Html.Hidden("providerKey", account.ProviderKey)
-                                            <input type="submit" class="btn btn-primary" value="Remove" title="Remove this @account.LoginProvider login from your account" />
-                                        </div>
+                                        using (Html.BeginForm("RemoveLogin", "Manage"))
+                                        {
+                                            @Html.AntiForgeryToken()
+                                            <div>
+                                                @Html.Hidden("loginProvider", account.LoginProvider)
+                                                @Html.Hidden("providerKey", account.ProviderKey)
+                                                <input type="submit" class="btn btn-primary" value="Remove" title="Remove this @account.LoginProvider login from your account" />
+                                            </div>
+                                        }
                                     }
-                                }
-                                else
-                                {
-                                    @: &nbsp;
-                                }
-                            </td>
-                        </tr>
+                                    else
+                                    {
+                                        @: &nbsp;
+                                    }
+                                </dd>
+                            }
+                        </dl>
                     }
-                </tbody>
-            </table>
-        }
-        if (Model.OtherLogins.Count > 0)
-        {
-            using (Html.BeginForm("LinkLogin", "Manage"))
-            {
-                @Html.AntiForgeryToken()
-                <div id="socialLoginList">
-                <p>
-                    @foreach (AuthenticationDescription p in Model.OtherLogins)
+                    if (Model.OtherLogins.Count > 0)
                     {
-                        <button type="submit" class="btn btn-primary" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                        using (Html.BeginForm("LinkLogin", "Manage"))
+                        {
+                            @Html.AntiForgeryToken()
+                            <div id="socialLoginList">
+                                <p>
+                                    @foreach (AuthenticationDescription p in Model.OtherLogins)
+                                    {
+                                        <button type="submit" class="btn btn-primary" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                                    }
+                                </p>
+                            </div>
+                        }
                     }
-                </p>
-                </div>
-            }
-        }
-    }
-}
+                }
+            </div>
+        </div>
+
+
+    </div>
+</div>
+
+
