--- a/CV.Management.Web/Content/main.css
+++ b/CV.Management.Web/Content/main.css
@@ -68,7 +68,7 @@ html, body {
     max-width: 100%;
 }
 
-#file_upload, #file_save {
+#file_upload, #file_save, #file_delete {
     max-width: 100%;
     margin-top: 20px;
     width: 100%;
@@ -376,4 +376,62 @@ html, body {
 #file_delete {
     width: 100%;
     margin-top: 15px;
+}
+
+@media only screen and (max-width : 319px) {
+    .register-row {
+        padding-top: 30px;
+        text-align: center;
+    }
+}
+
+/* Custom, iPhone Retina */
+@media only screen and (min-width : 320px) {
+    .register-row {
+        padding-top: 30px;
+        text-align: center;
+    }
+
+    .education_row {
+        padding-bottom: 30px;
+
+    }
+
+    .education-main {
+        border-right: 1px solid rgb(221, 221, 221);
+    }
+
+    .tab_more {
+        margin-top: 0px;
+    }
+
+    .education-from-year-label, .education-to-year-label, .education-institution-label, .education-degree-label {
+        font-size: 14px;
+    }
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (min-width : 480px) {
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) {
+    
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) {
+    .education-main {
+        border-right: 0px;
+    }
+
+    .education-from-year-label, .education-to-year-label, .education-institution-label, .education-degree-label {
+        font-size: 12px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .education-from-year-label, .education-to-year-label, .education-institution-label, .education-degree-label {
+        font-size: 14px;
+    }
 }
