--- a/CV.Management.Web/Views/Account/Login.cshtml
+++ b/CV.Management.Web/Views/Account/Login.cshtml
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-4">
+                    <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
                         <div class="form-group">
                             @Html.LabelFor(m => m.Email, new { @class = "control-label" })
                             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-4">
+                    <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
                         <div class="form-group">
                             @Html.LabelFor(m => m.Password, new { @class = "control-label" })
                             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-4">
+                    <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
                         <div class="form-group">
                             <div class="checkbox">
                                 @Html.CheckBoxFor(m => m.RememberMe, new { @class = "remember-input" })
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-4">
+                    <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
                         <div class="form-group">
                             <input type="submit" value="Log in" class="btn btn-primary" />
                         </div>
@@ -78,13 +78,13 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-3 col-md-offset-3">
+            <div class="row register-row">
+                <div class="col-md-3 col-md-offset-3 col-sm-3 col-sm-offset-3">
                     <p>
                         @Html.ActionLink("Register as a new user", "Register")
                     </p>
                 </div>
-                <div class="col-md-3 col-md-offset-1">
+                <div class="col-md-3 col-sm-3">
                     @*Enable this once you have account confirmation enabled for password reset functionality*@
                     <p>
                         @Html.ActionLink("Forgot your password?", "ForgotPassword")
