--- a/CV.Management.Web/Views/Cv/Profile.cshtml
+++ b/CV.Management.Web/Views/Cv/Profile.cshtml
@@ -21,10 +21,10 @@
         <div id="collapse1" class="panel-collapse collapse">
             <div class="panel-body">
                 <div class="row">
-                    <div class="col-sm-3">
+                    <div class="col-xs-4">
                         @Html.Partial("_FileUpload", Model.FileUploadViewModel)
                     </div>
-                    <div class="col-sm-9 personal-information">
+                    <div class="col-xs-8 personal-information">
                         @Html.Partial("_PersonalInformation", Model.PersonalInformationViewModel)
                     </div>
                 </div>
