--- a/CV.Management.Web/Views/Shared/_PersonalInformation.cshtml
+++ b/CV.Management.Web/Views/Shared/_PersonalInformation.cshtml
@@ -39,11 +39,11 @@
                     @Html.LabelFor(model => model.Phone, new { @class = "control-label col-md-12" })
                     <div class="col-md-12">
                         <div class="row">
-                            <div class="col-md-4 phone-code-input-div">
+                            <div class="col-xs-4 phone-code-input-div">
                                 @Html.TextBoxFor(model => model.PhoneCode, new { @class = "form-control", @placeholder = @Resources.PhoneCodePlaceholder })
                                 @Html.ValidationMessageFor(model => model.PhoneCode)
                             </div>
-                            <div class="col-md-8 phone-input-div">
+                            <div class="col-xs-8 phone-input-div">
                                 @Html.TextBoxFor(model => model.Phone, new { @class = "form-control", @placeholder = @Resources.PhonePlaceholder })
                                 @Html.ValidationMessageFor(model => model.Phone)
                             </div>
