Added preview for current user. Removed legacy stuff.

--- a/CV.Management.Web/Views/Cv/Profile.cshtml
+++ b/CV.Management.Web/Views/Cv/Profile.cshtml
@@ -11,7 +11,7 @@
 
 <div class="loading-popup">
     <div class="loading-popup-content">
-        <p>Saving. Please wait...</p>
+        <p>Loading. Please wait...</p>
     </div>
 </div>
 
