--- a/CV.Management.Web/Content/main.css
+++ b/CV.Management.Web/Content/main.css
@@ -413,6 +413,17 @@ html, body {
         font-size: 24px;
     }
 
+.preview-container {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 20px;
+    cursor:pointer;
+}
+
+.admin-link {
+    padding-left: 20px;
+}
+
 @media only screen and (max-width : 319px) {
     .register-row {
         padding-top: 30px;
