--- a/CV.Management.Web/Content/main.css
+++ b/CV.Management.Web/Content/main.css
@@ -1,9 +1,11 @@
-﻿.navbar {
+﻿/* ---------------------------- NAVIGATION BAR ----------------------------*/
+
+.navbar {
     height: 90px;
     margin: 0px;
 }
 
-.navbar-inverse {
+.navbar-default {
     background-color: #FFFFFF;
     border-color: #FFFFFF;
 }
@@ -17,20 +19,103 @@
         max-height: 100%;
     }
 
-.nav > li > a {
+.nav > li a {
     padding-top: 30px;
     padding-bottom: 30px;
 }
 
-.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
-    color: #231f20;
+.navbar-default .navbar-nav li a:hover, .navbar-default .navbar-nav li a:focus {
+    color: black;
+    text-decoration: none;
 }
 
-.navbar-toggle {
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+    background-color: #1a76bc;
+    border-color: #1a76bc;
+}
+
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    background-color: #1a76bc;
+}
+
+.navbar-default .navbar-toggle {
+    background-color: #1a76bc;
+    border-color: #1a76bc;
     padding: 10px;
     margin: 25px 15px 25px 0;
 }
 
+    .navbar-default .navbar-toggle .icon-bar {
+        background-color: #FFFFFF;
+    }
+
+.navbar-default .navbar-nav li a, .navbar-default .navbar-nav li span {
+    color: white;
+}
+
+navbar-default .language-submenu-item {
+    color: white
+}
+
+.navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: white;
+}
+
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+    color: white;
+    background-color: #1a76bc;
+}
+
+.nav > li {
+    border-top: 1px solid white;
+}
+
+.first-element-in-dropdown {
+    border-top: 0px !important;
+}
+
+.preview-container > img {
+    display: none;
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) {
+    .navbar-default .navbar-collapse, .navbar-default .navbar-form {
+        background-color: white;
+    }
+
+    .nav > li:hover {
+        border-bottom: 2px solid #1a76bc;
+        color: #1a76bc;
+    }
+
+    .nav > li {
+        border-top: 0px;
+    }
+
+    .navbar-default .navbar-nav li a, .navbar-default .navbar-nav li span {
+        color: black;
+    }
+
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+        color: black;
+    }
+
+    .navbar-default .navbar-nav li a:hover, .navbar-default .navbar-nav li a:focus {
+        color: #1a76bc;
+    }
+
+    .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+        color: #1a76bc;
+        background-color: #e7e7e7;
+    }
+
+    .preview-container > img {
+        display: inline;
+    }
+}
+
+/* ---------------------------- NAVIGATION BAR ----------------------------*/
 
 @font-face {
     font-family: 'dax-regularregular';
@@ -366,15 +451,6 @@ html, body {
     text-align: center;
 }
 
-.navbar-inverse .navbar-nav > li > a {
-    color: black;
-}
-
-.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
-    color: black;
-    background-color: #e6e6e6;
-}
-
 .login-table {
     padding-top:20px;
 }
@@ -430,8 +506,8 @@ html, body {
     cursor:pointer;
 }
 
-.admin-link {
-    padding-left: 20px;
+.preview-link {
+    padding-right: 20px;
 }
 
 @media only screen and (max-width : 319px) {
