--- a/CV.Management.Web/Views/Shared/_Layout.cshtml
+++ b/CV.Management.Web/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="container">
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-default navbar-static-top">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -40,17 +40,17 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="dropdown">
+                        <li class="dropdown first-element-in-dropdown">
                             <a href="#" class="dropdown-toggle dropdown-title" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/cv/profile/en">EN</a></li>
-                                <li><a href="/cv/profile/lv">LV</a></li>
+                                <li><a class="language-submenu-item" href="/cv/profile/en">EN</a></li>
+                                <li><a class="language-submenu-item" href="/cv/profile/lv">LV</a></li>
                             </ul>
                         </li>
-                        <li>
+                        <li class="preview-link">
                             <div class="preview-container">
                                 <img src="~/Content/Images/preview.png" />
-                                <span>Preview</span>
+                                <a>Preview</a>
                             </div>                        </li>
                         @if (User.IsInRole("Administrator"))
                         {
