--- a/CV.Management.Web/Views/Cv/Profile.cshtml
+++ b/CV.Management.Web/Views/Cv/Profile.cshtml
@@ -142,9 +142,9 @@
         </div>
     </div>
 
-    <div class="col-md-12">
+    <div class="col-xs-12">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-xs-12">
                 <div class="form-group text-right">
                     <input id="save_all" type="submit" value="@Resources.Save" class="btn btn-primary float-right" />
                 </div>
